<resources>
    <string name="app_name">真惠省</string>
    <string name="home">首页</string>
    <string name="rmb">￥</string>
    <string name="title">this is title...</string>
    <string name="tmall">天猫</string>
    <string name="shipping">发货</string>
    <string name="share">分享</string>
    <string name="get_coupon">领取优惠券</string>
    <string name="priceFormat">%.1f</string>
    <string name="same_recommend">猜您喜欢</string>
    <string name="clothes">精品服装</string>
    <string name="accessories">服饰配件</string>
    <string name="cosmetics">个护美妆</string>
    <string name="bag">鞋子箱包</string>
    <string name="coupon_recommend">好货推荐</string>
    <string name="hot_search">热门搜索</string>
    <string name="price_select">价格区间（元）</string>

    <string name="up_category">向上继续浏览%s</string>
    <string name="down_category">向下继续浏览%s</string>

    <string name="latter">稍后</string>
    <string name="product_image">product_image</string>
    <string name="chose_chrome">请选择浏览器</string>
    <string name="login_no_pass">免密登录</string>
    <string name="no_user_name">还没有真惠省账号？</string>
    <string name="has_user_name">已有真惠省账号？</string>
    <string name="err_name">请输入账号名！</string>
    <string name="err_pwd">请输入密码！</string>
    <string name="err_again_pwd">两次输入密码不同！</string>
</resources>
